# advent-of-code

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: bench_report.yml
benches/: criterion.rs  main.rs
input/year_2019/: day_01.aes  day_02.aes  day_03.aes  day_04.aes  day_05.aes  day_06.aes  day_07.aes  day_08.aes  day_09.aes  day_10.aes  day_11.aes  day_12.aes  day_13.aes  day_14.aes  day_15.aes  day_16.aes  day_17.aes  day_18.aes  day_19.aes  day_20.aes  day_21.aes  day_22.aes  day_23.aes  day_24.aes  day_25.aes
input/year_2020/: day_01.aes  day_02.aes  day_03.aes  day_04.aes  day_05.aes  day_06.aes  day_07.aes  day_08.aes  day_09.aes  day_10.aes  day_11.aes  day_12.aes  day_13.aes  day_14.aes  day_15.aes  day_16.aes  day_17.aes  day_18.aes  day_19.aes  day_20.aes  day_21.aes  day_22.aes  day_23.aes  day_24.aes  day_25.aes
input/year_2021/: day_01.aes  day_02.aes  day_03.aes  day_04.aes  day_05.aes  day_06.aes  day_07.aes  day_08.aes  day_09.aes  day_10.aes  day_11.aes  day_12.aes  day_13.aes  day_14.aes  day_15.aes  day_16.aes  day_17.aes  day_18.aes
input/year_2022/: day_01.aes  day_02.aes  day_03.aes  day_04.aes  day_05.aes  day_06.aes  day_07.aes  day_08.aes  day_09.aes  day_10.aes  day_11.aes  day_12.aes  day_13.aes  day_14.aes  day_15.aes  day_16.aes  day_17.aes  day_18.aes  day_19.aes  day_20.aes  day_21.aes  day_22.aes  day_23.aes  day_24.aes  day_25.aes
input/year_2023/: day_01.aes  day_02.aes  day_03.aes  day_04.aes  day_05.aes  day_06.aes  day_07.aes  day_08.aes  day_09.aes  day_10.aes  day_11.aes  day_12.aes  day_13.aes  (+12 more)
src/: day3.rs  downloader.rs  encryption.rs  input.rs  intcode.rs  lib.rs  main.rs  profiler.rs  solutions.rs
(+220 files in other folders)
