[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2021"

[lib]
name = "advent"

[features]
basic_profiler = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "criterion"
harness = false

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "rustls-tls"], default-features = false }
ahash = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = "0.4.7"
