[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2021"

[lib]
name = "advent"

[features]
basic_profiler = []

[dependencies]
ureq = "2.8"
ahash = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false


[target.'cfg(target_os = "linux")'.dependencies]
perf-event = "0.4"
